--- a/static/variables.less
+++ b/static/variables.less
@@ -14,7 +14,7 @@
 @brand-height: 53px;
 @breakpoint: 1000px;
 @gutter: 15px;
-@sidebar-width: 274px;
+@sidebar-width: 290px;
 @transition-speed: .25s;
 
 /*----- TYPE -----*/
